package bt_canban.vd1;

public interface IQLSV {
  void add(SinhVienCNTT sv);
  void printInfo();
}
